--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,7 +6,7 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: app
+      app: cloudrun-gke
   template:
     metadata:
       labels:
