--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cloudrun-gke-deployment
+  name: cloudbuild-gke-deployment
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: cloudrun-gke
+      app: cloudbuild-gke
   template:
     metadata:
       labels:
-        app: cloudrun-gke
+        app: cloudbuild-gke
     spec:
       containers:
-      - name: cloudrun-gke
-        image: 'us-central1-docker.pkg.dev/$PROJECT_ID/helloworld-docker-repo/cloudrun_gke:tag1'
+      - name: cloudbuild-gke
+        image: 'us-central1-docker.pkg.dev/$PROJECT_ID/helloworld-docker-repo/cloudbuild_gke:tag1'
         ports:
         - containerPort: 80
