--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: cloudbuild-gke
-        image: 'us-central1-docker.pkg.dev/$PROJECT_ID/helloworld-docker-repo/cloudbuild_gke:tag1'
+        image: 'us-central1-docker.pkg.dev/leonegre-sandbox-337808/helloworld-docker-repo/cloudbuild_gke:tag1'
         ports:
         - containerPort: 80 
